--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fimgbin.com%2Ffree-png%2Fbookmyshow&psig=AOvVaw3iYlEo2oFwAGjoMILNNcpQ&ust=1664989519269000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCKCRxbmHx_oCFQAAAAAdAAAAABAE" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fimgbin.com%2Ffree-png%2Fbookmyshow&psig=AOvVaw3iYlEo2oFwAGjoMILNNcpQ&ust=1664989519269000&source=images&cd=vfe&ved=0CAsQjRxqFwoTCKCRxbmHx_oCFQAAAAAdAAAAABAE" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>BookMyShow</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
